crates/merman-ffi/include/merman.h

#define MERMAN_NATIVE_STRUCT_SIZE(type) ((uint32_t)sizeof(type))
#define MERMAN_NATIVE_RESULT_INIT { MERMAN_NATIVE_STRUCT_SIZE(MermanNativeResult), 0, 0, {}, {}, {} }
#define MERMAN_NATIVE_RESULT_INIT { .struct_size = MERMAN_NATIVE_STRUCT_SIZE(MermanNativeResult) }
typedef int32_t MermanNativeStatus;
enum {
    MERMAN_NATIVE_STATUS_OK = 0,
    MERMAN_NATIVE_STATUS_INVALID_ARGUMENT = 1,
    MERMAN_NATIVE_STATUS_UTF8_ERROR = 2,
    MERMAN_NATIVE_STATUS_OPTIONS_JSON_ERROR = 3,
    MERMAN_NATIVE_STATUS_NO_DIAGRAM = 4,
    MERMAN_NATIVE_STATUS_PARSE_ERROR = 5,
    MERMAN_NATIVE_STATUS_RENDER_ERROR = 6,
    MERMAN_NATIVE_STATUS_UNSUPPORTED_OPERATION = 7,
    MERMAN_NATIVE_STATUS_PANIC = 8,
    MERMAN_NATIVE_STATUS_INTERNAL_ERROR = 9,
    MERMAN_NATIVE_STATUS_RESOURCE_LIMIT_EXCEEDED = 10,
    MERMAN_NATIVE_STATUS_ABI_MISMATCH = 11,
    MERMAN_NATIVE_STATUS_ABI_LAYOUT_MISMATCH = 12,
    MERMAN_NATIVE_STATUS_CALLBACK_ERROR = 13,
    MERMAN_NATIVE_STATUS_REENTRANT_CALL = 14,
    MERMAN_NATIVE_STATUS_INVALID_ENGINE = 15
};
typedef int32_t MermanNativeOperationCode;
typedef int32_t MermanNativeFunctionSlot;
typedef uint64_t MermanNativeEngineToken;
typedef struct MermanNativeSlice MermanNativeSlice;
typedef struct MermanNativeBuffer MermanNativeBuffer;
typedef struct MermanNativeTextMeasureRequest MermanNativeTextMeasureRequest;
typedef struct MermanNativeTextMeasureResult MermanNativeTextMeasureResult;
typedef struct MermanNativeEngineConfig MermanNativeEngineConfig;
typedef struct MermanNativeOperationRequest MermanNativeOperationRequest;
typedef struct MermanNativeResult MermanNativeResult;
typedef struct MermanNativeApiRequest MermanNativeApiRequest;
typedef struct MermanNativeApi MermanNativeApi;
typedef MermanNativeStatus (*MermanNativeTextMeasureCallback)(const MermanNativeTextMeasureRequest *request, MermanNativeTextMeasureResult *out_result, void *user_data);
typedef MermanNativeStatus (*MermanNativeRuntimeCatalogFn)(MermanNativeResult *out_result);
typedef MermanNativeStatus (*MermanNativeEngineNewFn)(const MermanNativeEngineConfig *config, MermanNativeEngineToken *out_engine, MermanNativeResult *out_result);
typedef MermanNativeStatus (*MermanNativeEngineFreeFn)(MermanNativeEngineToken engine);
typedef MermanNativeStatus (*MermanNativeExecuteCollectFn)(MermanNativeEngineToken engine, const MermanNativeOperationRequest *request, MermanNativeResult *out_result);
typedef void (*MermanNativeResultFreeFn)(MermanNativeResult *result);
struct MermanNativeSlice {
    uint32_t struct_size;
    const uint8_t *data;
    size_t len;
};
struct MermanNativeBuffer {
    uint32_t struct_size;
    uint8_t *data;
    size_t len;
};
struct MermanNativeTextMeasureRequest {
    uint32_t struct_size;
    uint32_t text_measurement_protocol_version;
    MermanNativeSlice text;
    MermanNativeSlice font_family;
    double font_size;
    MermanNativeSlice font_weight;
    MermanNativeSlice font_style;
    double max_width;
    double line_height;
    double letter_spacing;
    double word_spacing;
    int32_t wrap_mode;
    int32_t direction;
    int32_t white_space;
    uint8_t has_max_width;
    int32_t phase;
    int32_t operation;
};
struct MermanNativeTextMeasureResult {
    uint32_t struct_size;
    uint8_t handled;
    uint8_t has_raw_width;
    int32_t result_kind;
    double width;
    double height;
    double length;
    double bbox_left;
    double bbox_right;
    double raw_width;
    size_t line_count;
};
struct MermanNativeEngineConfig {
    uint32_t struct_size;
    MermanNativeSlice options_json;
    MermanNativeTextMeasureCallback text_measure;
    void *text_measure_user_data;
};
struct MermanNativeOperationRequest {
    uint32_t struct_size;
    MermanNativeOperationCode operation;
    MermanNativeSlice source;
    MermanNativeSlice uri;
    MermanNativeSlice options_json;
};
struct MermanNativeResult {
    uint32_t struct_size;
    MermanNativeStatus status;
    MermanNativeOperationCode operation;
    MermanNativeSlice media_type;
    MermanNativeBuffer data;
    MermanNativeBuffer metadata_or_error_json;
};
struct MermanNativeApiRequest {
    uint32_t struct_size;
    uint32_t expected_abi_version;
    MermanNativeSlice expected_layout_descriptor_digest;
};
struct MermanNativeApi {
    uint32_t struct_size;
    uint32_t abi_version;
    MermanNativeSlice layout_descriptor_digest;
    MermanNativeSlice capability_catalog_digest;
    MermanNativeSlice package_version;
    MermanNativeRuntimeCatalogFn runtime_catalog;
    MermanNativeEngineNewFn engine_new;
    MermanNativeEngineFreeFn engine_free;
    MermanNativeExecuteCollectFn execute_collect;
    MermanNativeResultFreeFn result_free;
};
/*
 * The descriptor digest identifies the complete declared wire layout before the function table
 * is returned. All public records are size-tagged; initialize caller-owned records with
 * MERMAN_NATIVE_STRUCT_SIZE(Type). MermanNativeResult is write-only on output: only its
 * struct_size must be initialized before a call, and a returned result must be passed to
 * result_free before that same record is reused. MERMAN_NATIVE_RESULT_INIT is the convenient
 * zeroed initializer.
 *
 * Ownership and concurrency rules from the ABI descriptor:
 * - borrowed_slices: Input, media-type, and callback slices are borrowed. Hosts must not retain
 *   their pointers after the enclosing call or callback returns.
 * - disabled_capabilities: A known operation whose backend is absent returns unsupported_operation
 *   with kind missing-capability and the canonical capability_id before result allocation. An
 *   unknown operation code returns the same status with kind unknown-operation and a null
 *   capability_id.
 * - engine_tokens: Engine tokens are opaque u64 values. Any thread attempting to re-enter or retire
 *   an engine while one of its host callbacks is active receives reentrant-call; this prevents
 *   callback-induced cross-thread deadlock. Outside a callback, engine_free retires a token exactly
 *   once, rejects new calls immediately, and lets an operation that already acquired the engine
 *   retain its internal state until that call returns. The host must keep the retained text-measure
 *   callback and user_data valid until all such operations return.
 * - result_buffers: Only result.data and result.metadata_or_error_json of a result previously
 *   written by Merman are Merman-owned. Ownership is registered against the exact result record
 *   address written by Merman: copying or moving a live result does not transfer ownership, and
 *   result_free must receive that original address. Output records are write-only: initialize
 *   struct_size, do not require zeroing, and release the original record before reuse. Repeated
 *   result_free calls on the same record are harmless. No result buffer may be passed to a host
 *   allocator.
 */
MermanNativeStatus merman_get_native_api(const MermanNativeApiRequest *request, MermanNativeApi *out_api);