platforms/flutter/lib/src/generated/native_abi.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Generated ABI 3 declarations for the Merman native function table.
class MermanNativeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MermanNativeBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MermanNativeBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// The descriptor digest identifies the complete declared wire layout before the function table
  /// is returned. All public records are size-tagged; initialize caller-owned records with
  /// MERMAN_NATIVE_STRUCT_SIZE(Type). MermanNativeResult is write-only on output: only its
  /// struct_size must be initialized before a call, and a returned result must be passed to
  /// result_free before that same record is reused. MERMAN_NATIVE_RESULT_INIT is the convenient
  /// zeroed initializer.
  ///
  /// Ownership and concurrency rules from the ABI descriptor:
  /// - borrowed_slices: Input, media-type, and callback slices are borrowed. Hosts must not retain
  /// their pointers after the enclosing call or callback returns.
  /// - disabled_capabilities: A known operation whose backend is absent returns unsupported_operation
  /// with kind missing-capability and the canonical capability_id before result allocation. An
  /// unknown operation code returns the same status with kind unknown-operation and a null
  /// capability_id.
  /// - engine_tokens: Engine tokens are opaque u64 values. Any thread attempting to re-enter or retire
  /// an engine while one of its host callbacks is active receives reentrant-call; this prevents
  /// callback-induced cross-thread deadlock. Outside a callback, engine_free retires a token exactly
  /// once, rejects new calls immediately, and lets an operation that already acquired the engine
  /// retain its internal state until that call returns. The host must keep the retained text-measure
  /// callback and user_data valid until all such operations return.
  /// - result_buffers: Only result.data and result.metadata_or_error_json of a result previously
  /// written by Merman are Merman-owned. Ownership is registered against the exact result record
  /// address written by Merman: copying or moving a live result does not transfer ownership, and
  /// result_free must receive that original address. Output records are write-only: initialize
  /// struct_size, do not require zeroing, and release the original record before reuse. Repeated
  /// result_free calls on the same record are harmless. No result buffer may be passed to a host
  /// allocator.
  int merman_get_native_api(
    ffi.Pointer<MermanNativeApiRequest> request,
    ffi.Pointer<MermanNativeApi> out_api,
  ) {
    return _merman_get_native_api(
      request,
      out_api,
    );
  }

  late final _merman_get_native_apiPtr = _lookup<
      ffi.NativeFunction<
          MermanNativeStatus Function(ffi.Pointer<MermanNativeApiRequest>,
              ffi.Pointer<MermanNativeApi>)>>('merman_get_native_api');
  late final _merman_get_native_api = _merman_get_native_apiPtr.asFunction<
      int Function(
          ffi.Pointer<MermanNativeApiRequest>, ffi.Pointer<MermanNativeApi>)>();
}

typedef MermanNativeStatus = ffi.Int32;
typedef DartMermanNativeStatus = int;
typedef MermanNativeOperationCode = ffi.Int32;
typedef DartMermanNativeOperationCode = int;
typedef MermanNativeFunctionSlot = ffi.Int32;
typedef DartMermanNativeFunctionSlot = int;
typedef MermanNativeEngineToken = ffi.Uint64;
typedef DartMermanNativeEngineToken = int;

final class MermanNativeSlice extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int len;
}

final class MermanNativeBuffer extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int len;
}

final class MermanNativeTextMeasureRequest extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int text_measurement_protocol_version;

  external MermanNativeSlice text;

  external MermanNativeSlice font_family;

  @ffi.Double()
  external double font_size;

  external MermanNativeSlice font_weight;

  external MermanNativeSlice font_style;

  @ffi.Double()
  external double max_width;

  @ffi.Double()
  external double line_height;

  @ffi.Double()
  external double letter_spacing;

  @ffi.Double()
  external double word_spacing;

  @ffi.Int32()
  external int wrap_mode;

  @ffi.Int32()
  external int direction;

  @ffi.Int32()
  external int white_space;

  @ffi.Uint8()
  external int has_max_width;

  @ffi.Int32()
  external int phase;

  @ffi.Int32()
  external int operation;
}

final class MermanNativeTextMeasureResult extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint8()
  external int handled;

  @ffi.Uint8()
  external int has_raw_width;

  @ffi.Int32()
  external int result_kind;

  @ffi.Double()
  external double width;

  @ffi.Double()
  external double height;

  @ffi.Double()
  external double length;

  @ffi.Double()
  external double bbox_left;

  @ffi.Double()
  external double bbox_right;

  @ffi.Double()
  external double raw_width;

  @ffi.Size()
  external int line_count;
}

typedef MermanNativeTextMeasureCallbackFunction = MermanNativeStatus Function(
    ffi.Pointer<MermanNativeTextMeasureRequest> request,
    ffi.Pointer<MermanNativeTextMeasureResult> out_result,
    ffi.Pointer<ffi.Void> user_data);
typedef DartMermanNativeTextMeasureCallbackFunction
    = DartMermanNativeStatus Function(
        ffi.Pointer<MermanNativeTextMeasureRequest> request,
        ffi.Pointer<MermanNativeTextMeasureResult> out_result,
        ffi.Pointer<ffi.Void> user_data);
typedef MermanNativeTextMeasureCallback
    = ffi.Pointer<ffi.NativeFunction<MermanNativeTextMeasureCallbackFunction>>;

final class MermanNativeEngineConfig extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external MermanNativeSlice options_json;

  external MermanNativeTextMeasureCallback text_measure;

  external ffi.Pointer<ffi.Void> text_measure_user_data;
}

final class MermanNativeOperationRequest extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @MermanNativeOperationCode()
  external int operation;

  external MermanNativeSlice source;

  external MermanNativeSlice uri;

  external MermanNativeSlice options_json;
}

final class MermanNativeResult extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @MermanNativeStatus()
  external int status;

  @MermanNativeOperationCode()
  external int operation;

  external MermanNativeSlice media_type;

  external MermanNativeBuffer data;

  external MermanNativeBuffer metadata_or_error_json;
}

final class MermanNativeApiRequest extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int expected_abi_version;

  external MermanNativeSlice expected_layout_descriptor_digest;
}

typedef MermanNativeRuntimeCatalogFnFunction = MermanNativeStatus Function(
    ffi.Pointer<MermanNativeResult> out_result);
typedef DartMermanNativeRuntimeCatalogFnFunction = DartMermanNativeStatus
    Function(ffi.Pointer<MermanNativeResult> out_result);
typedef MermanNativeRuntimeCatalogFn
    = ffi.Pointer<ffi.NativeFunction<MermanNativeRuntimeCatalogFnFunction>>;
typedef MermanNativeEngineNewFnFunction = MermanNativeStatus Function(
    ffi.Pointer<MermanNativeEngineConfig> config,
    ffi.Pointer<MermanNativeEngineToken> out_engine,
    ffi.Pointer<MermanNativeResult> out_result);
typedef DartMermanNativeEngineNewFnFunction = DartMermanNativeStatus Function(
    ffi.Pointer<MermanNativeEngineConfig> config,
    ffi.Pointer<MermanNativeEngineToken> out_engine,
    ffi.Pointer<MermanNativeResult> out_result);
typedef MermanNativeEngineNewFn
    = ffi.Pointer<ffi.NativeFunction<MermanNativeEngineNewFnFunction>>;
typedef MermanNativeEngineFreeFnFunction = MermanNativeStatus Function(
    MermanNativeEngineToken engine);
typedef DartMermanNativeEngineFreeFnFunction = DartMermanNativeStatus Function(
    DartMermanNativeEngineToken engine);
typedef MermanNativeEngineFreeFn
    = ffi.Pointer<ffi.NativeFunction<MermanNativeEngineFreeFnFunction>>;
typedef MermanNativeExecuteCollectFnFunction = MermanNativeStatus Function(
    MermanNativeEngineToken engine,
    ffi.Pointer<MermanNativeOperationRequest> request,
    ffi.Pointer<MermanNativeResult> out_result);
typedef DartMermanNativeExecuteCollectFnFunction
    = DartMermanNativeStatus Function(
        DartMermanNativeEngineToken engine,
        ffi.Pointer<MermanNativeOperationRequest> request,
        ffi.Pointer<MermanNativeResult> out_result);
typedef MermanNativeExecuteCollectFn
    = ffi.Pointer<ffi.NativeFunction<MermanNativeExecuteCollectFnFunction>>;
typedef MermanNativeResultFreeFnFunction = ffi.Void Function(
    ffi.Pointer<MermanNativeResult> result);
typedef DartMermanNativeResultFreeFnFunction = void Function(
    ffi.Pointer<MermanNativeResult> result);
typedef MermanNativeResultFreeFn
    = ffi.Pointer<ffi.NativeFunction<MermanNativeResultFreeFnFunction>>;

final class MermanNativeApi extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  external MermanNativeSlice layout_descriptor_digest;

  external MermanNativeSlice capability_catalog_digest;

  external MermanNativeSlice package_version;

  external MermanNativeRuntimeCatalogFn runtime_catalog;

  external MermanNativeEngineNewFn engine_new;

  external MermanNativeEngineFreeFn engine_free;

  external MermanNativeExecuteCollectFn execute_collect;

  external MermanNativeResultFreeFn result_free;
}

const int MERMAN_TEXT_MEASUREMENT_OPERATION_MEASURE = 0;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_COMPUTED_LENGTH = 1;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_BBOX_X = 2;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_BBOX_X_WITH_ASCII_OVERHANG = 3;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_TITLE_BBOX_X = 4;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_SIMPLE_BBOX_WIDTH = 5;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_RAW_BBOX_WIDTH = 6;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_TSPAN_BBOX_WIDTH = 7;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_TSPAN_BBOX_HEIGHT = 8;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_WRAP_PROBE_BBOX_WIDTH = 9;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_SIMPLE_BBOX_HEIGHT = 10;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_WRAPPED = 11;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_WRAPPED_WITH_RAW_WIDTH = 12;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_BOUNDING_CLIENT_RECT_WIDTH = 13;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_CREATE_TEXT_BBOX_Y_OFFSET = 14;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_MERMAID_CALCULATE_TEXT_DIMENSIONS =
    15;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_CANVAS_MEASURE_TEXT_WIDTH = 16;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_CREATE_TEXT_MIDDLE_BBOX_Y_OFFSET =
    17;

const int MERMAN_TEXT_MEASUREMENT_OPERATION_RAW_BBOX_HEIGHT = 18;

const int MERMAN_TEXT_MEASUREMENT_RESULT_KIND_METRICS = 0;

const int MERMAN_TEXT_MEASUREMENT_RESULT_KIND_LENGTH = 1;

const int MERMAN_TEXT_MEASUREMENT_RESULT_KIND_HORIZONTAL_EXTENTS = 2;

const int MERMAN_TEXT_MEASUREMENT_RESULT_KIND_WRAPPED_WITH_RAW_WIDTH = 3;

const int MERMAN_NATIVE_STATUS_OK = 0;

const int MERMAN_NATIVE_STATUS_INVALID_ARGUMENT = 1;

const int MERMAN_NATIVE_STATUS_UTF8_ERROR = 2;

const int MERMAN_NATIVE_STATUS_OPTIONS_JSON_ERROR = 3;

const int MERMAN_NATIVE_STATUS_NO_DIAGRAM = 4;

const int MERMAN_NATIVE_STATUS_PARSE_ERROR = 5;
